# Yatzy

./: yatzi.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  yatzi-0.1.0.0-inplace.conf
frontend/: app.js  index.html  style.css
src/: Main.hs  ServerMain.hs
src/Game/: AI.hs  Logic.hs  Server.hs  Types.hs  UI.hs
