cabal-version:       >=1.10
name:                yatzi
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules: Game.Types, Game.Logic, Game.Server
  build-depends: base >=4.14 && <5, containers, random, aeson, text, scotty, transformers, http-types
  default-language: Haskell2010

executable yatzi
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base >=4.14 && <5, containers, random, yatzi
  ghc-options: -Wall
  default-language: Haskell2010

executable yatzi-server
  hs-source-dirs: src
  main-is: ServerMain.hs
  build-depends: base >=4.14 && <5, containers, random, aeson, text, scotty, transformers, http-types, yatzi
  ghc-options: -Wall
  default-language: Haskell2010
